# reskinner

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  lint.yml
demos/: README.md  __main__.py  all_elements.py  extended_layouts.py  pin.py  reskinner.py  rounded_buttons.py  updated_table.py
psg_reskinner/: colorprocessor.py  constants.py  default.py  psg_reskinner.py
src/: __init__.py  __main__.py  __version__.py  colorizer.py  constants.py  default_window.py  elements.py  interpolation.py  reskinner.py  sg.py
src/reskinner/: __init__.py  __main__.py  __version__.py  _compat.py  colorizer.py  constants.py  default_window.py  easing.py  elements.py  interpolation.py  reskinner.py  sg.py
