[project]
name = "reskinner"
readme = "README.md"
requires-python = ">=3.8"
description = "Instantaneous theme changing for PySimpleGUI windows."
version = "4.0.0"
authors = [{ name = "Divine U. Afam-Ifediogor" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
keywords = ["PySimpleGUI", "reskin", "realtime", "theme", "color"]
dependencies = [
    "colour>=0.1.5",
    'StrEnum; python_version < "3.11"',
]

[project.urls]
"Homepage" = "https://github.com/definite-d/psg_reskinner/"
"Bug Tracker" = "https://github.com/definite-d/psg_reskinner/issues/"


[project.optional-dependencies]
psg = [
    "PySimpleGUI>=4.60.3.96",
]
fsg = [
    "FreeSimpleGUI>=5.0.0"
]

[[tool.uv.index]]
url = "https://pysimplegui.net/install"
